Papers please kata finished but optimization is incoming